--- a/dashboard/templates/jobs/_build_tags.html
+++ b/dashboard/templates/jobs/_build_tags.html
@@ -1,11 +1,5 @@
 <script>
-$(function() {
-  $('.dropdown-menu a').click(function() {
-    console.log($(this).attr("data-value")), $(this).closest(".dropdown").find("input.options").val($(this).attr("data-value"))
-  }), $("#buildTag").click(function() {
-        $(this).val("")
-  });
-});
+$(function(){$(".dropdown-menu a").click(function(){console.log($(this).attr("data-value")),$(this).closest(".dropdown").find("input.options").val($(this).attr("data-value"))}),$("#buildTag").click(function(){$(this).val("")})});
 </script>
 <div class="input-group dropdown">
     <input id="buildTag" type="text" class="form-control options dropdown-toggle" value="Select Build Tag">
