[UI] Add languages_list.html
- New UI for Languages section
- Table view to show the available languages
- Status cards showing the enabled, disabled languages and number of aliases
- Ability to filter languages by status as well as set i.e. adding filter master will filter the languages which are in master set
- Options to Edit, Disable/Enable language
- Ability to filter the Enabled/Disabled languages by clicking the number from status cards
- Add new CSS class cursor-pointer-ts; https://stackoverflow.com/a/41462592/6202405
- Use bootstrap labels for language sets, thanks to @akshay196, introduces new CSS class label-lang-set-ts
- Show PatternFly empty state when no languages and/or language sets are available
- Add JS function applyFilter, to apply filters on Tables
- Add new CSS class icon-disabled-ts:before; to have color #363636 and size same as pficons for fa-ban
- Ability to filter languages by clicking on language set labels
- Don't show language set panel when no languages are available

Signed-off-by: Bhavin Gandhi <bhavin7392@gmail.com>

--- a/transtats/static/css/transtats.css
+++ b/transtats/static/css/transtats.css
@@ -2,8 +2,20 @@
 .cards-ts {
     background: #f0f0f0;
 }
+.cursor-pointer-ts {
+    cursor: pointer;
+}
 .container-cards-pf {
     margin-bottom: 20px;
+}
+.label-lang-set-ts {
+    display:inline-block;
+    padding-top: 0.3em;
+    margin-top: 0.25em;
+}
+.icon-disabled-ts:before{
+    color: #363636;
+    font-size: 1.168em;
 }
 
 /*
