[UI] Update urls in base.html
Switch to {% url '' %} tag instead of static paths

Signed-off-by: Bhavin Gandhi <bhavin7392@gmail.com>

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -127,28 +127,28 @@
         </a>
       </li>
       <li class="list-group-item">
-        <a href="/settings/packages" id="button-packages">
+        <a href="{% url 'settings-packages' %}" id="button-packages">
           <span class="fa fa-file-zip-o" data-toggle="tooltip" title="Packages"></span>
           <span class="list-group-item-value">Packages</span>
 
         </a>
       </li>
       <li class="list-group-item">
-        <a href="/jobs" id="button-jobs">
+        <a href="{% url 'jobs' %}" id="button-jobs">
           <span class="fa fa-bolt" data-toggle="tooltip" title="Jobs"></span>
           <span class="list-group-item-value">Jobs</span>
         </a>
 
       </li>
       <li class="list-group-item ">
-        <a href="/settings/languages" id="button-languages">
+        <a href="{% url 'settings-languages' %}" id="button-languages">
           <span class="fa fa-language" data-toggle="tooltip" title="Languages"></span>
           <span class="list-group-item-value">Languages</span>
         </a>
 
       </li>
       <li class="list-group-item">
-        <a href="/settings/translation-platforms" id="button-platforms">
+        <a href="{% url 'settings-trans-platforms' %}" id="button-platforms">
           <span class="fa fa-server" data-toggle="tooltip" title="Translation Platforms"></span>
           <span class="list-group-item-value">Platforms</span>
         </a>
