--- a/dashboard/templates/languages/language_new.html
+++ b/dashboard/templates/languages/language_new.html
@@ -1,47 +1,14 @@
-{% extends "base.html" %}
-{% load crispy_forms_tags %}
+{% extends "form_base.html" %}
 {% block extrascript %}
 <script src="/static/node_modules/bootstrap-switch/dist/js/bootstrap-switch.js"></script>
 {% endblock %}
-{% block pagecontent %}
-<div class="col-md-2"></div>
-<div class="col-md-8">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">Add a new Language
-        <a class="pull-right" href="{% url 'settings-languages' %}">
-          <i class="pficon-close"></i>
-        </a>
-      </h3>
-    </div>
-    <div class="panel-body">
-      {% for message in messages %}
-      {% if 'success' in message.tags %}
-      <div class="alert alert-success alert-dismissable">
-        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
-          <span class="pficon pficon-close"></span>
-        </button>
-        <span class="pficon pficon-ok"></span>
-        {{ message }}
-      </div>
-      {% endif %}
-      {% if 'error' in message.tags %}
-      <div class="alert alert-danger alert-dismissable">
-        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">
-          <span class="pficon pficon-close"></span>
-        </button>
-        <span class="pficon pficon-error-circle-o"></span>
-        {{ message }}
-      </div>
-      {% endif %}
-      {% endfor %}
-      <div style="padding-left:0.5em; padding-right:0.5em">
-        {% crispy form %}
-      </div>
-    </div>
-  </div>
-</div>
-
+{% block formtitle %}
+Add a new language
+{% endblock %}
+{% block formreturnurl %}
+{% url 'settings-languages' %}
+{% endblock %}
+{% block formscript %}
 <script>
   $(function () {
     $(".bootstrap-switch").bootstrapSwitch();
