[UI] New url structure for packages section
- /packages
  - /new (package-new)
  - /view/<package_name> (package-new)
  - /export/<format> (packages-export)

- Use get_success_url() in NewPackageView
- Update all occurrences of old url names

Signed-off-by: Bhavin Gandhi <bhavin7392@gmail.com>

--- a/dashboard/templates/stats/trans_status_package.html
+++ b/dashboard/templates/stats/trans_status_package.html
@@ -18,7 +18,7 @@
     <a href="{% url 'home' %}" class="btn btn-default"><i class="glyphicon glyphicon-dashboard"></i></a>
     <a href="{% url 'trans-status' %}" class="btn btn-default">Translation Status</a>
     <a href="{% url 'trans-status-packages' %}" class="btn btn-default">Packages</a>
-    <a href="{% url 'trans-status-package' package_name %}" class="btn btn-default">{{ package_name }}</a>
+    <a href="{% url 'package-view' package_name %}" class="btn btn-default">{{ package_name }}</a>
 {% endblock %}
 
 {% block right-navigation %}
