--- a/dashboard/templates/jobs/jobs_home.html
+++ b/dashboard/templates/jobs/jobs_home.html
@@ -28,6 +28,33 @@
 <hr/>
 <div class="panel panel-default">
   <div class="panel-heading">
+    <h3 class="panel-title">Sync Package Upstream
+        <span id="upstreamwaiting" class="pull-right"></span></h3>
+  </div>
+  <div class="panel-body">
+    This would initiate a syncupstream job to update:
+      <span class="text-info" data-toggle="tooltip" title="After sync, head to package details page for upstream stats or inspect log.">
+          clone package upstream repository, filter translations and calculate translation statistics.</span><hr/>
+    <form method="post" id ="syncUpstreamForm" class="form-horizontal">{% csrf_token %}
+        <input type="hidden" value="syncupstream" id="syncUpstreamIdentifier"/>
+        {% if packages %}
+        <select id="packageName" class="selectpicker" data-live-search="true" data-size="15">
+            <option selected disabled>Select Package</option>
+            {% for package_name, upstream_name in packages %}
+                <option>{{ package_name }}</option>
+            {% endfor %}
+        </select>
+        <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
+            <span class="glyphicon glyphicon-play-circle"></span> Trigger Now</button>
+        {% else %}
+            <span>No package configured. Add <a href="{% url 'package-new' %}">one</a> now.</span>
+        {% endif %}
+        <span id="syncUpstreamMsg"></span>
+    </form>
+  </div>
+</div>
+<div class="panel panel-default">
+  <div class="panel-heading">
       <h3 class="panel-title">Sync Build Tags
           <span id="buildtagswaiting" class="pull-right"></span></h3>
   </div>
