--- a/dashboard/templates/packages/package_list.html
+++ b/dashboard/templates/packages/package_list.html
@@ -225,7 +225,7 @@
         </div>
       </div>
       <div class="form-group">
-        <a class="btn btn-default" type="button" id="button-add-package" href="{% url 'settings-packages-new' %}">
+        <a class="btn btn-default" type="button" id="button-add-package" href="{% url 'package-new' %}">
           <i class="pficon pficon-add-circle-o"></i> Add package</a>
         <a class="btn btn-default" type="button" id="button-export" href="{% url 'packages-export' 'csv' %}">
           <i class="pficon pficon-export"></i> Export to CSV</a>
@@ -304,7 +304,7 @@
     {% for package in packages %}
     <tr>
       <td>
-        <a href="{% url 'trans-status-package' package.package_name %}">{{ package.package_name }}</a>
+        <a href="{% url 'package-view' package.package_name %}">{{ package.package_name }}</a>
       </td>
       <td>
         <a href="{{ package.upstream_url }}" target="_blank">{{ package.upstream_url }}</a>
@@ -416,7 +416,7 @@
     <a href="#">on the documentation</a>.
   </p>
   <div class="blank-slate-pf-main-action">
-    <a class="btn btn-primary btn-lg" href="{% url 'settings-packages-new' %}">
+    <a class="btn btn-primary btn-lg" href="{% url 'package-new' %}">
       <i class="pficon pficon-add-circle-o"></i> Add package </a>
   </div>
   <div class="blank-slate-pf-secondary-action">
