--- a/dashboard/templates/settings/packages.html
+++ b/dashboard/templates/settings/packages.html
@@ -27,7 +27,7 @@
         </span>
         <div class="pull-right">
             {% if user.is_authenticated %}
-                <a class="btn btn-default" role="button" href="{% url 'settings-packages-new' %}">Add Package</a>
+                <a class="btn btn-default" role="button" href="{% url 'package-new' %}">Add Package</a>
             {% endif %}
             {% if packages %}
             <a class="btn btn-default" role="button" href="{% url 'packages-export' 'csv' %}">
