[UI] New url structure for packages section
- /packages
  - /new (package-new)
  - /view/<package_name> (package-new)
  - /export/<format> (packages-export)

- Use get_success_url() in NewPackageView
- Update all occurrences of old url names

Signed-off-by: Bhavin Gandhi <bhavin7392@gmail.com>

--- a/dashboard/templates/jobs/jobs_home.html
+++ b/dashboard/templates/jobs/jobs_home.html
@@ -47,7 +47,7 @@ function getUrlVars(){for(var t,e=[],s=window.location.href.slice(window.locatio
         <button type="submit" data-loading-text="Syncing..." class="btn btn-default">
             <span class="glyphicon glyphicon-play-circle"></span> Trigger Now</button>
         {% else %}
-            <span>No package configured. Add <a href="{% url 'settings-packages-new' %}">one</a> now.</span>
+            <span>No package configured. Add <a href="{% url 'package-new' %}">one</a> now.</span>
         {% endif %}
         <span id="syncUpstreamMsg"></span>
     </form>
